# rxwidgets

./: .gitignore  README.md  pyproject.toml
examples/: Advanced.ipynb  Flatmap.ipynb  Interact.ipynb  Pandas.ipynb
src/rxwidgets/: contexts.py  decorators.py  delegating.py  valuebox.py
src/rxwidgets/ipython/: __init__.py  automap.py  defer.py  display.py  flatmap.py  interact.py  load.py  parameters.py  print.py  screen.py  stream.py  voodoo.py  widgets.py
src/rxwidgets/ipython/pandas/: __init__.py  filter_dataframe.py  paths.py
src/rxwidgets/ipython/pandas/dataframe/: __init__.py  filter.py  select_row.py
src/rxwidgets/ipython/widgets/: __init__.py  wrap.py
src/rxwidgets/rx/: __init__.py  call.py  voodoo.py
