[tool.poetry]
name = "rxwidgets"
version = "0.1.3"
description = "iPython notebooks with reactive UI - powered by RxPy and ipywidgets"
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
packages = [
    { include = "rxwidgets", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
reactivex = "^4.0.0"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.2"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
