[tool.poetry]
name = "rxwidgets"
version = "0.1.6"
description = "iPython notebooks with reactive UI - powered by RxPy and ipywidgets"
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
keywords = ["ipython", "reactivex"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Ivorforce/rxwidgets"
repository = "https://github.com/Ivorforce/rxwidgets"
include = [
    "LICENSE",
]
packages = [
    { include = "rxwidgets", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
reactivex = "^4.0.0"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.2"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
